tests/fail/strict_pointer_rules.tk

shape Point(x: i32, y: i32)

fn main() -> i32 {
    unsafe {
        // FAIL 1: Implicit pointer inference
        auto p1 = new Point(x=1, y=2) // EXPECT: error[E0451]:
        
        auto ^p2# = new Point(x=3, y=4)
        
        // FAIL 2: Dot with sigil
        (^p2).x = 10 // EXPECT: error[E0406]:
        
        // FAIL 3 REMOVED: C++ Arrow usage is invalid in Toka (use p2.y instead)
        // p2.y = 20
    }
    return 0
}
